<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">


    <TextView
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:text="@string/Text_view_first_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:text="@string/Text_view_last_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />


    <TextView
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:text="@string/Text_view_age"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.485" />

    <TextView
        android:layout_width="364dp"
        android:layout_height="28dp"
        android:text="@string/Text_view_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743" />

    <TextView
        android:id="@+id/My_Text_view_fill_out_the_form"
        android:layout_width="280dp"
        android:layout_height="28dp"
        android:text="@string/Text_view_fill_out_the_form"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <!--Edit_text_first_name: no numbers are allowed or other special characters  -->
    <EditText
        android:id="@+id/Edit_text_first_name"
        android:layout_width="251dp"
        android:layout_height="43dp"
        android:digits="ABCDEFGHIJKLMNOPQVWXYZabcdefghijklmnopqrstuvwxyz-"
        android:inputType="text"
        android:text="@string/show_blank"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223" />

    <!--Edit_text_last_name: no numbers are allowed or other special characters  -->
    <EditText
        android:id="@+id/Edit_text_last_name"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:digits="ABCDEFGHIJKLMNOPQVWXYZabcdefghijklmnopqrstuvwxyz-"
        android:inputType="text"
        android:text="@string/show_blank"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <!--Edit_text_age: only numbers are allowed and the number of digits are limited to 3  -->
    <EditText
        android:id="@+id/Edit_text_age"
        android:layout_width="259dp"
        android:layout_height="39dp"
        android:inputType="number"
        android:maxLength="3"
        android:text="@string/show_blank"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553" />

    <EditText
        android:id="@+id/Edit_text_4"
        android:layout_width="203dp"
        android:layout_height="54dp"
        android:inputType="text"
        android:text="@string/show_blank"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.837" />

    <Button
        android:id="@+id/Button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.644" />

    <Button
        android:id="@+id/Button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>